--- a/counter-service.yaml
+++ b/counter-service.yaml
@@ -1,3 +1,9 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: counter-service
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -20,7 +26,7 @@ spec:
     spec:
       containers:
       - name: counter-service
-        image: 686255960187.dkr.ecr.ap-southeast-2.amazonaws.com/checkpoint-task:latest       
+        image: 881490090336.dkr.ecr.eu-west-3.amazonaws.com/checkpoint-task:1.0.3
         ports:
         - containerPort: 8080
         resources:
@@ -30,6 +36,7 @@ spec:
           limits:
             cpu: "500m"  
             memory: "512Mi"
+
 ---
 apiVersion: v1
 kind: Service
@@ -46,4 +53,4 @@ spec:
   ports:
     - protocol: TCP
       port: 80      
-      targetPort: 8080  # Match the containerPort in the Deployment
+      targetPort: 8080
