Update docker-build-and-push.yml trying to fix kubeval step

--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -22,7 +22,9 @@ jobs:
         run: |
           curl -LO https://github.com/instrumenta/kubeval/releases/latest/download/kubeval-linux-amd64.tar.gz
           tar xf kubeval-linux-amd64.tar.gz
-          ./kubeval **/*.yaml
+          chmod +x kubeval
+          # Find all .yaml files and validate them
+          find . -name "*.yaml" -print0 | xargs -0 ./kubeval
 
       # Step 3: Configure AWS credentials
       - name: Configure AWS credentials
