--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -56,6 +56,7 @@ jobs:
         run: |
           ecr_uri=$(aws ssm get-parameter --name /checkpoint/ecr_repository --query "Parameter.Value" --output text)
           echo "ECR Repository URL: $ecr_uri"
+          echo "ecr_uri=$ecr_uri" >> $GITHUB_ENV
 
       # Step 6: Log in to Amazon ECR
       - name: Log in to Amazon ECR
