--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -61,7 +61,7 @@ jobs:
         # Step 6: Retrieve EKS Cluster Name
       - name: Retrieve EKS Cluster Name
         run: |
-          eks_cluster=$(aws ssm get-parameter --name /checkpoint/eks_cluster_name --query "Parameter.Value" --output text)
+          eks_cluster=$(aws ssm get-parameter --name /checkpoint/eks_cluster --query "Parameter.Value" --output text)
           echo "EKS Cluster Name: $eks_cluster"
           echo "eks_cluster=$eks_cluster" >> $GITHUB_ENV
 
